[package]
name = "backtracking-linear-search-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
argmin = "0.8.1"
argmin-math = { version = "0.3.0", features = ["ndarray_latest-nolinalg-serde", "nalgebra_latest-serde"] }